--- a/journal/202003.md
+++ b/journal/202003.md
@@ -240,7 +240,7 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 @Dustorf [posted](https://proposals.decred.org/proposals/c830ea5afea45a0aabf4092d1bea51fb10b8bfa2d8474aac03224f0f94d3d1af/comments/56) that he will be operating in a reduced capacity for the next couple months and that the cost of the proposal will be reduced accordingly. The executions affected include: newsletter, original content generation, Decred Assembly, PR, and release coordination, and update work. This specifically means that the DEX release will have to be managed by the developers and the community at large.
 
-@dezryth [posted](https://scottrchristian.com/2020/03/15/dezryth-proposal-updates/) a second update about his operation of Decred's Facebook account for the month of February. This one is more detailed and includes stats for each post, comparison to competitors and shares some ideas to try next. @dezryth acknowledges that current stats are not great and that organic following is hard to build, but on the good side active posting brought a 30% increase of daily views.
+@dezryth [posted](https://scottrchristian.com/2020/03/15/dezryth-proposal-updates/) a second update about his operation of Decred's Facebook account for the month of February. This one is more detailed and includes stats for each post, comparison to competitors, and shares some ideas about next steps. @dezryth acknowledges that current stats are not great and that organic following is hard to build, but on the good side active posting brought a 30% increase in daily views.
 
 @bee has extensively (really) [commented](https://www.reddit.com/r/decred/comments/fa70c3/decred_2019_marketing_report/) on the 2019 Marketing Report and shared his vision for moving forward.
 
@@ -275,7 +275,7 @@ Attended:
 - Mar 12 - [Decred Meetup](https://www.meetup.com/es-ES/BitcoinBlockchainUruguay/events/269160706/) - Montevideo, Uruguay. Around 25 people attended the meetup. @tomee presented an introduction to Decred and its security, adaptability, and sustainability, Politeia, governance and how to contribute. The meetup was also a networking session and some of the people knew the project from Labitconf. (photos: [1](https://twitter.com/ivarese/status/1238628854379536389), [2](https://twitter.com/cryptorc_tech/status/1241081659669315585))
 - Mar 12 - [Blockchain Summit Latam](https://twitter.com/Decred_ES/status/1237552322596593665) - Panama City, Panama. The event was rescheduled to Oct 15-16, but this change occurred 24 hours before the event when some speakers were already in the area (~35 people). The event staff took the opportunity and hosted a small meetup where presenters got the chance to network and to know about the projects from close up. @adcade and @elian talked with a few representatives and secured an [interview](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market) for Spanish Cointelegraph. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200312-blockchain-summit-latam-meetup-panama-city-panama.md))
 - Mar 12 - [Hablemos Decred 01](https://twitter.com/Decred_ES/status/1238242352306614273) - Internet. "Let's Talk Decred", the first Spanish online meeting used Decred's Discord server. Most questions were about Decred's PoS voting system. Those who had some prior knowledge of crypto asked how to stake, and those who didn't wanted to know more about voting rights and what can stakeholders do with their tickets. About a third of ~15 people were new to the project. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200312-hablemosdecred-01-internet.md))
-- Mar 18 - [Exchanges in LATAM](https://twitter.com/Decred_ES/status/1240428280756310018) - Internet. @elian talked about centralized and decentralized exchanges in a virtual meetup with people from [@AvaLatam](https://twitter.com/AvaLatam), [@blockchain_land](https://twitter.com/blockchain_land) and virica.io Mexico. Around 16 people attended and it was learned that online talks should be 30 min or less.
+- Mar 18 - [Exchanges in LATAM](https://twitter.com/Decred_ES/status/1240428280756310018) - Internet. @elian talked about centralized and decentralized exchanges in a virtual meetup with people from [@AvaLatam](https://twitter.com/AvaLatam), [@blockchain_land](https://twitter.com/blockchain_land) and virica.io Mexico. Around 16 people attended and one lesson learned was that online talks should be 30 min or less.
 - Mar 24 - [Decred Webinar](https://www.meetup.com/es-ES/blockacademycl/events/269108758/) - Internet. @tomee and @camilolwi talked all things Decred and the challenges of decentralized blockchain governance in a webinar co-organized with Blockchain Academy Chile. ([video](https://www.youtube.com/watch?v=U07ZL_qFAQM))
 - Mar 27 - [Hablemos Decred 02](https://twitter.com/Decred_ES/status/1243214184793485314) - Internet. Second Spanish online meetup explored Jitsi to connect 13 participants from Argentina, Mexico, Bolivia, Chile, of which 7 were new to the project. This time the call started with an intro talk about Decred, a demo of Decrediton, and an open mic for questions and comments. ([report](https://github.com/decredcommunity/events/blob/master/reports/20200327-hablemosdecred-02-internet.md))
 - Mar 29 - [Binance AMA](https://twitter.com/Decred_ES/status/1244360357843533825) - Internet. The event was hosted in the Binance Spanish Telegram group with 8,000+ members and received a high level of engagement. @adcade, @elian, and @pablito got 155 questions from 73 participants and gifted 0.333 DCR to the best questions. A good amount of knowledge was gathered that can signal where prospect Decred users lack information. This was the second Decred AMA with the Binance Spanish community and the longest AMA they had so far (~2.5 hours). ([report](https://github.com/decredcommunity/events/blob/master/reports/20200329-decred-ama-binance-spanish-community-internet.md))
@@ -370,7 +370,7 @@ Selected Twitter discussions:
 
 In March DCR was trading between USD 8.68-19.78 / BTC 0.0017-0.0021. The average daily rate was $13.40.
 
-On Mar 7 BTC/USD started its decline from $9,100 mark down to $7,800 on Mar 11. On Mar 12 it joined the global COVID-19 panic and tanked below ~$4,500 (and [even lower](https://twitter.com/HsakaTrades/status/1239227306863820801) in some markets). Most cryptoassets lost around 40% that day, demonstrating their mostly speculative price levels and persisting dependence on BTC. This dump took DCR/USD with it down to ~$8.
+On Mar 7 BTC/USD started its decline from $9,100 mark down to $7,800 on Mar 11. On Mar 12 it joined the global COVID-19 panic and tanked below ~$4,500 (and [even lower](https://twitter.com/HsakaTrades/status/1239227306863820801) in some markets). Most cryptoassets lost around 40% that day, demonstrating their mostly speculative price levels and persisting dependence on BTC. This dump took DCR/USD with it down to ~$8. 
 
 Fred Wilson [noted](https://avc.com/2020/03/correlation-and-market-meltdowns/) that "in panics, all assets are correlated", but when the panic settles cryptocurrency fundamentals might start kicking in.
 
@@ -384,7 +384,7 @@ The Steem-Sun conflict began last month when the Steemit company (and its "ninja
 
 Hive is the same as Steem in most regards, with 1 STEEM being exchangeable for 1 HIVE - the main difference is that Sun's Steemit STEEM tokens will not be redeemable on the HIVE chain, effectively cutting them out of the ecosystem. When this [story](https://www.coindesk.com/splinter-cryptocurrency-hive-outperforms-justin-suns-steem-after-one-week-trading) was written the price of HIVE was almost double that of STEEM, but as of Apr 4, the two tokens are trading for similar prices. This case should be of interest to those who say coin voting is plutocratic, as it shows what can happen when whales try to use their coins to impose their will on an unwilling community.
 
-It has been a good month for people who like to buy, hold or sell cryptocurrency without being considered a criminal. The governments in [South Korea](https://thenews.asia/amendment-to-special-reporting-act-passes-cryptocurrency-trading-now-legal-in-south-korea/) and supreme court in [India](https://news.bitcoin.com/bitcoin-legal-india-supreme-court-verdict-cryptocurrency/) making moves to nullify previously imposed restrictions on cryptocurrency trading.
+It has been a good month for people who like to buy, hold or sell cryptocurrency without being considered a criminal. The governments in [South Korea](https://thenews.asia/amendment-to-special-reporting-act-passes-cryptocurrency-trading-now-legal-in-south-korea/) and supreme court in [India](https://news.bitcoin.com/bitcoin-legal-india-supreme-court-verdict-cryptocurrency/) made moves to nullify previously imposed restrictions on cryptocurrency trading.
 
 Since Mar 18 Tether has issued over $400M USDT in batches of $60M and surpassed the [$6 billion](https://beincrypto.com/tether-usdt-quietly-surpasses-the-6-billion-mark/) mark. On Mar 25 USDT held on exchanges has set a new ATH of [$1.2 billion](https://twitter.com/glassnodealerts/status/1242849119456157699). { check numbers} The timing is interesting as it comes quickly after the market crash of Mar 12. Use USDT with caution, because even its co-founder believes ["it doesn't really matter"](https://beincrypto.com/tether-co-founder-it-doesnt-really-matter-if-usdt-backed-by-equal-amount-of-dollars/) if it's backed by an equal amount of dollars. { check the audio for exact quote }
 
@@ -406,12 +406,12 @@ Retrospective and a bit of trivia from @bee:
 - The byte size of an issue has grown from 20 KB to ~50 KB. The biggest issue was [64.5 K](https://xaur.github.io/decred-news/journal/201908.html) (7.5K words).
 - Our production process has evolved significantly and is now extensively [documented](https://github.com/xaur/decred-news/blob/docs/guidelines.md).
 - You may have noticed that [Decred](https://xaur.github.io/decred-news/journal/201805.html) [Cakes](https://xaur.github.io/decred-news/journal/202002.html) have a special meaning for me.
-- To publish the very [first](https://xaur.github.io/decred-news/journal/201804.html) issue we needed a title. Among the candidates considered were "Monthly Stakeholder Entertainment Session" and "Deep in Decred". The latter was rejected as having too strong connotations with adult content.
+- To publish the very [first](https://xaur.github.io/decred-news/journal/201804.html) issue we needed a title. Among the candidates considered were "Monthly Stakeholder Entertainment Session" and "Deep in Decred". The latter was rejected for its sexual connotations.
 - In March 2019 I got somewhat exhausted and [announced](https://xaur.github.io/decred-news/journal/201903.html#psa-decred-journal-takes-a-break) that the production of future issues is uncertain. Luckily, a few more people have [stepped in](https://github.com/xaur/decred-news/issues/65) and we continued.
 - Problem of the first year: when starting every issue I worried that I wouldn't collect enough content and that it would look poor compared to previous months that had so much. I was wrong every single time. Problem of the second year: when finishing every issue I worried that it is too big and it got hard to track everything that is happening.
 - I couldn't imagine what the [index](https://xaur.github.io/decred-news/) of all issues and translations would look like in 2 years!
 - After pioneering the use of Git and GitHub for DJ I began to annoy pretty much everyone in the community to do the same for other documents. I believe that knowledge preservation is [important](https://github.com/xaur/decred-news/blob/docs/guidelines.md#why-git) and will keep annoying you guys. Thank you for your patience.
-- About 6 months after starting DJ I got upset about declining Reddit upvotes. Then I talked to people and learned two things. First is that people who've been here for years say it is common: humans get less sensitive to any stimulus over time, even a good one. Second is that I took upvotes seriously without even knowing who is behind those numbers. But people I do know, talk to every day, people of highest intelligence and wisdom who are the reason why I'm still here, keep telling me I'm doing a good job. And they keep doing an amazing job for years without chasing the likes. So I asked myself, why do I care about these numbers more than I care what the best people around me think? It makes no sense! So I stopped worrying about that. (No offense to our dear readers, I'm sharing this for anyone who gets overfocused on stats).
+- About 6 months after starting DJ I got upset about declining Reddit upvotes. Then I talked to people and learned two things. First is that people who've been here for years say it is common: humans get less sensitive to any stimulus over time, even a good one. Second is that I took upvotes seriously without even knowing who is behind those numbers. But people I do know, talk to every day, people of highest intelligence and wisdom who are the reason why I'm still here, keep telling me I'm doing a good job. And they keep doing an amazing job for years without chasing the likes. So I asked myself, why do I care about these numbers more than I care what the best people around me think? It makes no sense! So I stopped worrying about that. (No offense to our dear readers, we value your feedback greatly, just not the number of clicks!  I'm sharing this for anyone who gets too focused on stats).
 - Thanks to Decred stakeholders for funding this work and helping us deliver the scale and quality of this production.
 - We received a lot of positive [feedback](https://xaur.github.io/decred-news/testimonials.html) over these two years. Praise is not the goal, but kind words let us know that we're still on the right track. Thank you for all the support!
 
