Rel ext add link

--- a/journal/202003.md
+++ b/journal/202003.md
@@ -390,7 +390,7 @@ Since Mar 18 Tether has issued over $400M USDT in batches of $60M and surpassed 
 
 U.S. government approved an exceptionally large [$2 trillion](https://www.zerohedge.com/economics/anatomy-2-trillion-covid-19-stimulus-bill) "stimulus" plan attributed to COVID-19. Discussion of the source of funds is still rare in the media. One politician [argued](https://twitter.com/RepThomasMassie/status/1243565651391897603) that the bill creates even more secrecy around the Fed that is already not auditable.
 
-U.S. Fed made multiple unprecedented moves attributed to COVID-19, succinctly [summarized](https://www.bloomberg.com/news/articles/2020-03-25/fed-unbound-all-the-u-s-central-bank-s-corona-related-moves) by Bloomberg. Most of that means creating money out of thin air without any labor, and then loaning out that money to people and businesses who will need to _work_ to pay it back. Among the measures are swap lines built to "pump USD out across the world to ease access to the world's most important currency".
+U.S. Fed made multiple unprecedented moves attributed to COVID-19, succinctly [summarized](https://www.bloomberg.com/news/articles/2020-03-25/fed-unbound-all-the-u-s-central-bank-s-corona-related-moves) by Bloomberg. Most of that means [creating money](https://seekingalpha.com/article/4335693-inflation-alert-money-supply-expanding-26x-rate-of-qe1) out of thin air without any labor, and then loaning out that money to people and businesses who will need to _work_ to pay it back. Among the measures are swap lines built to "pump USD out across the world to ease access to the world's most important currency".
 
 President of one of the 12 Federal Reserve Banks openly admitted in an [interview](https://www.zerohedge.com/markets/kashkari-says-fed-has-infinite-amount-cash-we-create-it-electronically) that "there's an infinite amount of cash at the Federal Reserve".
 
