--- a/journal/202003.md
+++ b/journal/202003.md
@@ -248,18 +248,18 @@ A comprehensive compilation of [common misconceptions](https://github.com/decred
 
 Monde PR's achievements for March:
 
-- Outreach and introductions to target journalists.
-- Pitched reactive comments to current news stories.
-- Submitted comments from Decred spokespeople to 7 news stories.
-- Pitched Decred to 3 upcoming features.
-- Submitted thought leadership piece written by @richardred to ValueWalk.
-- Secured 2 media interviews.
+- outreach and introductions to target journalists
+- pitched reactive comments to current news stories
+- submitted comments from Decred spokespeople to 7 news stories
+- pitched Decred to 3 upcoming features
+- submitted thought leadership piece written by @richardred to ValueWalk
+- secured 2 media interviews
 
-Additionally, the following news coverage was secured:
+News coverage secured by Monde PR:
 
-- An [article](https://cointelegraph.com/news/proof-of-stake-vs-proof-of-work-which-one-is-fairer) in Cointelegraph featuring commentary from @jy-p on consensus models.
-- An [article](https://www.financemagnates.com/cryptocurrency/news/fintech-experts-share-tips-for-remote-work-during-coronavirus-quarantine/) in Finance Magnates featuring commentary from @richardred on remote working.
-- An [article](https://www.coindesk.com/remote-working-proves-unexpected-hero-as-half-of-us-economy-shifts-to-home-offices) in CoinDesk featuring commentary from @jy-p on rapid scaling which was also syndicated to Yahoo Finance.
+- an [article](https://cointelegraph.com/news/proof-of-stake-vs-proof-of-work-which-one-is-fairer) in Cointelegraph featuring commentary from @jy-p on consensus models
+- an [article](https://www.financemagnates.com/cryptocurrency/news/fintech-experts-share-tips-for-remote-work-during-coronavirus-quarantine/) in Finance Magnates featuring commentary from @richardred on remote working
+- an [article](https://www.coindesk.com/remote-working-proves-unexpected-hero-as-half-of-us-economy-shifts-to-home-offices) in CoinDesk featuring commentary from @jy-p on rapid scaling which was also syndicated to Yahoo Finance
 
 ## Events
 
