--- a/journal/202003.md
+++ b/journal/202003.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – March 2020
 
-![{alt text}](../img/{file.jpg} "{hover tooltip text}")
+![abstract art](../img/journal-202003-384.png)
 
-_Image: {caption: "$title by $author. $optional-description" for artwork, or just "$description" for photos}_
+_Image: Expand Vector by @saender_
 
 Highlights for March:
 
@@ -427,4 +427,4 @@ Credits (alphabetical order):
 
 - writing and editing: bee, elian, degeri, l1ndseymm, kozel, pablito, richardred, s\_ben
 - reviews and feedback: adcade, ammarooni, chappjc, davecgh, emiliomann, guisso, jholdstock, jrick, lukebp, matheusd, michae2xl, raedah
-- title image: {}
+- title image: saender
