--- a/journal/202003.md
+++ b/journal/202003.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – March 2020
+# Decred Journal – March 2020
 
 ![abstract art](../img/journal-202003-384.png)
 
@@ -386,7 +386,7 @@ Hive is the same as Steem in most regards, with 1 STEEM being exchangeable for 1
 
 It has been a good month for people who like to buy, hold or sell cryptocurrency without being considered a criminal. The governments in [South Korea](https://thenews.asia/amendment-to-special-reporting-act-passes-cryptocurrency-trading-now-legal-in-south-korea/) and supreme court in [India](https://news.bitcoin.com/bitcoin-legal-india-supreme-court-verdict-cryptocurrency/) made moves to nullify previously imposed restrictions on cryptocurrency trading.
 
-Since Mar 18 Tether has issued over $400M USDT in batches of $60M and surpassed the [$6 billion](https://beincrypto.com/tether-usdt-quietly-surpasses-the-6-billion-mark/) mark. On Mar 25 USDT held on exchanges has set a new ATH of [$1.2 billion](https://twitter.com/glassnodealerts/status/1242849119456157699). { check numbers} The timing is interesting as it comes quickly after the market crash of Mar 12. Use USDT with caution, because even its co-founder believes ["it doesn't really matter"](https://beincrypto.com/tether-co-founder-it-doesnt-really-matter-if-usdt-backed-by-equal-amount-of-dollars/) if it's backed by an equal amount of dollars. { check the audio for exact quote }
+Since Mar 18 Tether has issued over $400M USDT in batches of $60M and surpassed the [$6 billion](https://beincrypto.com/tether-usdt-quietly-surpasses-the-6-billion-mark/) mark. On Mar 25 USDT held on exchanges has set a new ATH of [$1.2 billion](https://twitter.com/glassnodealerts/status/1242849119456157699). The timing is interesting as it comes quickly after the market crash of Mar 12. Use USDT with caution, because even its co-founder believes ["it doesn't really matter"](https://beincrypto.com/tether-co-founder-it-doesnt-really-matter-if-usdt-backed-by-equal-amount-of-dollars/) if it's backed by an equal amount of dollars.
 
 U.S. government approved an exceptionally large [$2 trillion](https://www.zerohedge.com/economics/anatomy-2-trillion-covid-19-stimulus-bill) "stimulus" plan attributed to COVID-19. Discussion of the source of funds is still rare in the media. One politician [argued](https://twitter.com/RepThomasMassie/status/1243565651391897603) that the bill creates even more secrecy around the Fed that is already not auditable.
 
