--- a/journal/202004.md
+++ b/journal/202004.md
@@ -94,11 +94,13 @@ Staking: [30-day average](https://dcrstats.com/) ticket price was {n.n, try to s
 
 {recap of ticket price action if it was interesting}
 
-{ hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
+{ hint: consider keeping Block size and Transactions sections every 2nd or 3rd month, unless there is something interesting to report }
 
-Block size: This month, the blockchain size grew by {n} MB. Blocks had an average size of {n.nn} KB. The smallest block had a size of {n.nn} KB and the largest one, {n.nn} KB. {any interesting fact about this month's blocks}
+Block size: This month, the blockchain size grew by {n} MB. [Block size](https://explorer.dcrdata.org/charts?chart=block-size&bin=block&axis=time) {set zoom to show the month} varied between {n.n}-{n.n} with an average of {n.n} KB. {any interesting fact about this month's blocks}
 
 Transactions: In April, Decred users made {n} regular transactions and bought {n} tickets. {n} tickets were rewarded for voting and {n} were revoked. On average, there were {n} regular DCR transactions and {n} new tickets per day.
+
+{ hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
 Nodes: Throughout [April](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1585699200000&to=1588291200000) there was an average of {} public listening nodes and {} total nodes per dcr.farm. Version distribution: {vx.y.z: n% (+n%), ...}.
 
