--- a/journal/202004.md
+++ b/journal/202004.md
@@ -116,6 +116,9 @@ https://ournetwork.substack.com/p/our-network-issue-15
 
 https://twitter.com/metalpaysme/status/1249745420206686208
 
+- MetalPay allows to pay people using your cash balance, linked bank account or cryptocurrency. Every time you make a payment you earn MTL, the app's native currency. The service is available in most US states
+- { how many assets do they have listed? }
+
 https://twitter.com/SwapSpaceCo/status/1250078395884539906
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
@@ -154,10 +157,22 @@ Upcoming:
 
 Selected articles:
 
-- https://www.financemagnates.com/cryptocurrency/news/fintech-experts-share-tips-for-remote-work-during-coronavirus-quarantine/
+- https://medium.com/@permabullnino/decred-on-chain-strongest-hand-market-cap-ratio-146d6854e1d6
+- https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities @jy-p quoted
+
+{ These were mentioned in March Monde report but not in Media. keep? }
+
+- https://www.financemagnates.com/cryptocurrency/news/fintech-experts-share-tips-for-remote-work-during-coronavirus-quarantine/ 
 - https://www.coindesk.com/remote-working-proves-unexpected-hero-as-half-of-us-economy-shifts-to-home-offices
   - syndicated to YF https://ca.finance.yahoo.com/news/remote-working-proves-unexpected-hero-182504644.html
 - https://cointelegraph.com/news/proof-of-stake-vs-proof-of-work-which-one-is-fairer
+
+{Phoenix Green stuff, check what's good}:
+
+- https://medium.com/phoenix-green/decred-governance-proposal-protecting-the-treasury-2bcab84800ad
+- https://medium.com/@kencameron77/finance-2-0-5dea40e4b60e
+- https://medium.com/@kencameron77/open-sourced-finance-7ce8a3fdb648
+- https://medium.com/@kencameron77/3-things-everyone-should-know-about-cryptocurrencies-e38c3db4127b
 
 Translations:
 
