--- a/journal/202004.md
+++ b/journal/202004.md
@@ -10,7 +10,9 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 { hint: add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
 
-[dcrd](https://github.com/decred/dcrd): {}
+[dcrd](https://github.com/decred/dcrd):
+
+- Decentralize Treasury WIP https://github.com/decred/dcrd/pull/2170
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
@@ -79,6 +81,10 @@ In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqD
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
+https://blockcommons.red/publication/mm-phase1-wrapup/
+
+https://blockcommons.red/politeia-digest/issue030/
+
 ## Network
 
 { hint:
@@ -120,6 +126,13 @@ https://twitter.com/metalpaysme/status/1249745420206686208
 - { how many assets do they have listed? }
 
 https://twitter.com/SwapSpaceCo/status/1250078395884539906
+
+https://twitter.com/SimpleSwap_io/status/1252914580851998720 { is it a new integration or an update from an old one? when did it add dcr? }
+
+{ @zubair summary: how it works, standard vs light, when launch(ed), status }
+
+- https://twitter.com/steelbackup/status/1248058631523905538
+- https://steelbackup.com/
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -180,11 +193,13 @@ Translations:
 
 Videos:
 
-- {}
+- Decred bi-Weekly News Update - April 18th, 2020 https://www.youtube.com/watch?v=3TLeEO8Mz1k
 
 Audio:
 
-- {}
+- https://roughconsensus.libsyn.com/rough-consensus-4-gold-bitcoin-and-decred
+
+Easter artwork by @AGNFAB1 https://twitter.com/AGNFAB1/status/1248188645128970240
 
 ## Community Discussions
 
