dig decreddrive and more

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -45,6 +45,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 Other:
 
 - https://help.github.com/en/github/getting-started-with-github/faq-about-changes-to-githubs-plans
+- @Checkmate published calculations for implementing his metrics in dcrdata https://github.com/checkmatey/checkonchain/tree/master/research_articles/dcr_charts_gitissues {correct? keep?}
 
 Dev activity stats for April: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
 
@@ -112,9 +113,11 @@ Nodes: Throughout [April](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from
 
 {any interesting analysis or events in the network}
 
-On-chain update https://nitter.snopyta.org/_Checkmatey_/status/1247649984473894912
+On-chain update https://twitter.com/_Checkmatey_/status/1247649984473894912
 
 https://ournetwork.substack.com/p/our-network-issue-15
+
+tx volumes https://twitter.com/_Checkmatey_/status/1255084712386654209
 
 ## Integrations
 
@@ -172,6 +175,8 @@ Selected articles:
 
 - https://medium.com/@permabullnino/decred-on-chain-strongest-hand-market-cap-ratio-146d6854e1d6
 - https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities @jy-p quoted
+- https://cointelegraph.com/news/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education @jy-p quoted
+- [Decred Drive](https://twitter.com/decreddrive) keeps delivering nice weekly updates.
 
 { These were mentioned in March Monde report but not in Media. keep? }
 
@@ -194,10 +199,12 @@ Translations:
 Videos:
 
 - Decred bi-Weekly News Update - April 18th, 2020 https://www.youtube.com/watch?v=3TLeEO8Mz1k
+- BTC & DCR on-chain analytics event with @Checkmate https://www.youtube.com/watch?v=H_COE9A-t3I
 
 Audio:
 
 - https://roughconsensus.libsyn.com/rough-consensus-4-gold-bitcoin-and-decred
+- https://soundcloud.com/decredindepth/chris-burniske-crypto-in-the
 
 Easter artwork by @AGNFAB1 https://twitter.com/AGNFAB1/status/1248188645128970240
 
@@ -236,6 +243,8 @@ In April DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average dail
 https://twitter.com/glassnodealerts/status/1245612312964161538
 
 { interesting? } https://www.theblockcrypto.com/post/60930/top-crypto-exchanges-token-issuers-named-in-friday-barrage-of-u-s-class-action-lawsuits
+
+{ org-sale victory? https://twitter.com/EFF/status/1256053946289774594 }
 
 {other: regulations, privacy, security, fun}
 
