--- a/journal/202004.md
+++ b/journal/202004.md
@@ -82,8 +82,6 @@ In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqD
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
-https://blockcommons.red/publication/mm-phase1-wrapup/
-
 https://blockcommons.red/politeia-digest/issue030/
 
 ## Network
@@ -130,7 +128,11 @@ https://twitter.com/metalpaysme/status/1249745420206686208
 
 https://twitter.com/SwapSpaceCo/status/1250078395884539906
 
-https://twitter.com/SimpleSwap_io/status/1252914580851998720 { is it a new integration or an update from an old one? when did it add dcr? }
+SimpleSwap:
+
+- https://twitter.com/SimpleSwap_io/status/1252914580851998720
+- long list of coins https://simpleswap.io/coins
+- { is it a new integration or an update from an old one? when did it add dcr? }
 
 { @zubair summary: how it works, standard vs light, when launch(ed), status }
 
@@ -176,6 +178,8 @@ Selected articles:
 - https://medium.com/@permabullnino/decred-on-chain-strongest-hand-market-cap-ratio-146d6854e1d6
 - https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities @jy-p quoted
 - https://cointelegraph.com/news/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education @jy-p quoted
+- https://medium.com/@kencameron77/the-bitcoin-time-machine-29f228656cd3
+- https://messari.io/article/what-if-bitcoin-had-a-treasury { worthy? paywalled? }
 - [Decred Drive](https://twitter.com/decreddrive) keeps delivering nice weekly updates.
 
 { These were mentioned in March Monde report but not in Media. keep? }
@@ -229,6 +233,8 @@ Selected Twitter discussions:
 In April DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
 
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+
+https://blockcommons.red/publication/mm-phase1-wrapup/
 
 ## Relevant External
 
