--- a/journal/202004.md
+++ b/journal/202004.md
@@ -12,7 +12,16 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 [dcrd](https://github.com/decred/dcrd):
 
-- Decentralize Treasury WIP https://github.com/decred/dcrd/pull/2170
+- `schnorr`: improvements to safety, testing and performance, as well as a comprehensive [README](https://github.com/decred/dcrd/blob/master/dcrec/secp256k1/schnorr/README.md) describing the custom Schnorr-based signature scheme used in Decred
+- more places of the codebase migrated from Go's standard big integers to specialized field types
+
+{ meta: what is the idea behind focusing on schnorr recently? is it for the treasury work? }
+
+Lots of optimizations made in dcrd made over the past months have led to a "suffering from success" [meme](https://twitter.com/degeri_crypto/status/1248522626210897921): older nodes now think the new version is requesting too much data too quickly and banning it. The "banning rate" parameters will have to be adjusted to reflect the new speeds. { which specific change this was triggered by? and where is the change adjusting the ban rate? }
+
+In progress:
+
+- Decentralize Treasury Spending [development](https://github.com/decred/dcrd/pull/2170) work was published to make it more visible and let more people join the discussion. The work is based on the the [proposal](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f) but adds significant changes to the spec. { it mentions changes to the spec, is that spec available anywhere? }
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
