community discussions and some media

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -164,6 +164,8 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
 
+https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities 
+
 ## Events
 
 Attended:
@@ -186,14 +188,16 @@ Upcoming:
 
 Selected articles:
 
-- https://medium.com/@permabullnino/decred-on-chain-strongest-hand-market-cap-ratio-146d6854e1d6
-- https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities @jy-p quoted
+- Decred On-Chain: Strongest Hand Market Cap + Ratio by @PermabullNino ([medium](https://medium.com/@permabullnino/decred-on-chain-strongest-hand-market-cap-ratio-146d6854e1d6))
+- Decred Market Maker Monitoring - Phase 1 Wrap-Up by @richard-red ([blockcommons.red](https://blockcommons.red/publication/mm-phase1-wrapup/))
+- Our Network Issue #15 - featuring Decred updates from @checkmate ([substack](https://ournetwork.substack.com/p/our-network-issue-15))
+- The Bitcoin Time Machine by Phoenix Green ([medium](https://medium.com/@kencameron77/the-bitcoin-time-machine-29f228656cd3)) - compared Bitcoin with Decred 
+- https://news.8btc.com/8btc-interview-cryptos-and-coronavirus-what-we-learned-from-foreign-communities @jy-p quoted {rr: we don't usually feature stories with quotes here, it would be more at home in Outreach?}
 - https://cointelegraph.com/news/harsh-stablecoin-recommendations-from-g-20-are-a-step-in-the-right-direction-but-regulators-need-more-education @jy-p quoted
-- https://medium.com/@kencameron77/the-bitcoin-time-machine-29f228656cd3
 - https://messari.io/article/what-if-bitcoin-had-a-treasury { worthy? paywalled? }
 - [Decred Drive](https://twitter.com/decreddrive) keeps delivering nice weekly updates.
 
-{ These were mentioned in March Monde report but not in Media. keep? }
+{ These were mentioned in March Monde report but not in Media. keep? rr: We have not included stories with quotes here before}
 
 - https://www.financemagnates.com/cryptocurrency/news/fintech-experts-share-tips-for-remote-work-during-coronavirus-quarantine/ 
 - https://www.coindesk.com/remote-working-proves-unexpected-hero-as-half-of-us-economy-shifts-to-home-offices
@@ -213,14 +217,18 @@ Translations:
 
 Videos:
 
-- Decred bi-Weekly News Update - April 18th, 2020 https://www.youtube.com/watch?v=3TLeEO8Mz1k
-- BTC & DCR on-chain analytics event with @Checkmate https://www.youtube.com/watch?v=H_COE9A-t3I
-- https://www.youtube.com/watch?v=ddjelXN5KZs
+- Decred bi-Weekly News Update - April 18th, 2020 ([youtube](https://www.youtube.com/watch?v=3TLeEO8Mz1k))
+- Decred Australia Virtual Meetup - BTC & DCR on-chain analytics event with @Checkmate ([youtube](https://www.youtube.com/watch?v=H_COE9A-t3I))
+- Psychic Andre has good feelings about things going up, the video is mostly about the federal reserve but on the subject of Decred Andre says "they're fine" ([youtube](https://www.youtube.com/watch?v=ddjelXN5KZs))
+- 
 
 Audio:
 
-- https://roughconsensus.libsyn.com/rough-consensus-4-gold-bitcoin-and-decred
-- https://soundcloud.com/decredindepth/chris-burniske-crypto-in-the
+- Rough Consensus Ep. 4 Gold, Bitcoin and Decred ([libsyn](https://roughconsensus.libsyn.com/rough-consensus-4-gold-bitcoin-and-decred))
+
+- Decred in Depth (has given up on numbering) - Chris Burniske of Placeholder VC talks about recent developments, why Decred HAS (Hypersecure Adaptable Sustainable) it, opportunities for dcrdex and Politeia to expand the Decred ecosystem, and much more! ([soundcloud](https://soundcloud.com/decredindepth/chris-burniske-crypto-in-the))
+
+  
 
 Easter artwork by @AGNFAB1 https://twitter.com/AGNFAB1/status/1248188645128970240
 
@@ -234,11 +242,15 @@ Comm systems news:
 
 Selected Reddit posts:
 
-- {}
+- The Decred Journal's own reddit [post](https://www.reddit.com/r/decred/comments/fy493y/decred_journal_march_2020/) was the most discussed one on the subreddit this month with 42 comments! 
+- The [post](https://www.reddit.com/r/decred/comments/fyi49j/checkmate_on_twitter_cost_to_launch_a_1hr_double/) related to @checkmate's tweet comparing DCR attack cost to other chains saw discussion on reddit too.
 
 Selected Twitter discussions:
 
-- {}
+- @moo31337 [tweeted](https://github.com/decred/dcrd/pull/2170) about a WIP PR for work on the decentralized treasury spending proposal.
+- @checkmate [tweeted](https://twitter.com/_Checkmatey_/status/1248498765113126912) about the cost to double spend attack DCR being 54x higher than BTC, stimulating much discussion.
+- @checkmate [announced](https://twitter.com/_Checkmatey_/status/1253116008639811585) the launch of a new project, with a team of contributors working on a new Decred on-chain metrics site. 
+- Messari [musing](https://twitter.com/MessariCrypto/status/1255579343973232640) on what if Bitcoin had Decred's treasury, and [graphing](https://twitter.com/MessariCrypto/status/1255579345319596033) out how much that would have been worth if Bitcoin had spent ~23% of its monthly treasury income and saved the rest.
 
 ## Markets
 
