--- a/journal/202004.md
+++ b/journal/202004.md
@@ -33,9 +33,18 @@ In progress:
 - [first](https://github.com/decred/decrediton/pull/2448) [steps](https://github.com/decred/decrediton/pull/2449) to migrate to functional components (a newer [approach](https://programmingwithmosh.com/react/react-functional-components/) in the React framework - they are easier to reason about and test)
 - new action to [abandon transaction](https://github.com/decred/decrediton/pull/2467) that are not being mined or got "stuck"
 - [started](https://github.com/decred/decrediton/pull/2457) reusing the pi-ui library for several components in order to have consistent look & feel across Decred's different products
-- first [steps](https://github.com/decred/decrediton/pull/2452) towards [CSPP support](https://github.com/decred/decrediton/issues/2455)
+- first [steps](https://github.com/decred/decrediton/pull/2452) towards [CSPP support](https://github.com/decred/decrediton/issues/2455) { any rough estimate how much % is ready for CSPP? }
 
-[Politeia](https://github.com/decred/politeia): {}
+[Politeia](https://github.com/decred/politeia):
+
+- new [method](https://github.com/decred/politeia/pull/1137) to query line items that have been billed to the given proposal
+- [separated](https://github.com/decred/politeia/pull/1175) metadata out of Politeia proposals and CMS invoices - this removes a hacky way to store proposal title that was used previously and allows to add arbitrary metadata, including the fields required by the RFP-type proposals
+- part of the work to allow viewing Politeia [without javascript](https://github.com/decred/politeiagui/pull/1833)
+- normalized and added [caching](https://github.com/decred/politeiagui/pull/1844) for paywall data
+- [finished](https://github.com/decred/politeiagui/pull/1857) the [refactoring](https://github.com/decred/politeiagui/issues/1490) of the state management system
+- a batch of UI work to support [RFP proposals](https://github.com/decred/politeiagui/pull/1820)
+- several UI tweaks for the CMS
+- multiple bug fixes in Politeia and CMS
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
