Dev dcrstakepool, dcrpool

--- a/journal/202004.md
+++ b/journal/202004.md
@@ -46,9 +46,15 @@ In progress:
 - several UI tweaks for the CMS
 - multiple bug fixes in Politeia and CMS
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): {}
+[dcrstakepool](https://github.com/decred/dcrstakepool): Dependency updates and bug fixes.
 
-[dcrpool](https://github.com/decred/dcrpool): {}
+[dcrpool](https://github.com/decred/dcrpool):
+
+- added [cache](https://github.com/decred/dcrpool/pull/180), which improved the data flow (the hub now pushes new data into the cache instead of the GUI polling for it), improved rate limiting
+- added pagination in several places
+- configurable [account](https://github.com/decred/dcrpool/pull/191) for paying rewards
+- added GUI to [requesting a payment](https://github.com/decred/dcrpool/pull/198) manually and clear any remaining balance
+- increased test coverage
 
 [dcrlnd](https://github.com/decred/dcrlnd): {}
 
