--- a/journal/202004.md
+++ b/journal/202004.md
@@ -317,6 +317,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: bee, degeri, Exitus, pablito, richardred, s\_ben
 - reviews and feedback: {}
 - title image: {}
