--- a/journal/202004.md
+++ b/journal/202004.md
@@ -88,7 +88,13 @@ In progress:
 - [beeping](https://github.com/raedahgroup/dcrios/pull/667) for new blocks
 - UX tweaks and bug fixes
 
-[dcrdata](https://github.com/decred/dcrdata): {}
+[dcrdata](https://github.com/decred/dcrdata):
+
+- [optimizations](https://github.com/decred/dcrdata/pull/1690) and [database](https://github.com/decred/dcrdata/pull/1720) refactoring for the mixed coins chart
+- new API to query address [existence](https://github.com/decred/dcrdata/pull/1714)
+- new simple API for the [circulating](https://github.com/decred/dcrdata/pull/1697) coin supply
+- searching for a transaction [outpoint](https://github.com/decred/dcrdata/pull/1711)
+- bug fixes
 
 [tinydecred](https://github.com/decred/tinydecred): {}
 
