--- a/journal/202004.md
+++ b/journal/202004.md
@@ -96,7 +96,13 @@ In progress:
 - searching for a transaction [outpoint](https://github.com/decred/dcrdata/pull/1711)
 - bug fixes
 
-[tinydecred](https://github.com/decred/tinydecred): {}
+[tinydecred](https://github.com/decred/tinydecred):
+
+- [forms and settings](https://github.com/decred/tinydecred/pull/156) necessary to connect to dcrd
+- basic support for [GCS filters](https://github.com/decred/tinydecred/pull/149)
+- further increased test coverage in a [crusade](https://github.com/decred/tinydecred/issues/70) for an unforgiving test suite
+- all tests have been migrated to [pytest](https://github.com/decred/tinydecred/pull/161)
+- boosted the performance of crypto primitives with [Cython](https://github.com/decred/tinydecred/pull/160), reducing test execution time from 21 to 4 seconds. Fast tests grant productive development and a joy of life.
 
 [docs](https://github.com/decred/dcrdocs): {}
 
