--- a/journal/202004.md
+++ b/journal/202004.md
@@ -104,14 +104,17 @@ In progress:
 - all tests have been migrated to [pytest](https://github.com/decred/tinydecred/pull/161)
 - boosted the performance of crypto primitives with [Cython](https://github.com/decred/tinydecred/pull/160), reducing test execution time from 21 to 4 seconds. Fast tests grant productive development and a joy of life.
 
-[docs](https://github.com/decred/dcrdocs): {}
+[docs](https://github.com/decred/dcrdocs): [Added](https://github.com/decred/dcrdocs/pull/1087) a [page](https://docs.decred.org/advanced/mnemonic-seed/) documenting the differences between Decred and BIP-0039 seeds.
 
-[decred.org](https://github.com/decred/dcrweb): {}
+[decred.org](https://github.com/decred/dcrweb):
+
+- [nojs mode](https://github.com/decred/dcrweb/pull/875) improvements
+- exchanges updated
 
 Other:
 
-- https://help.github.com/en/github/getting-started-with-github/faq-about-changes-to-githubs-plans
-- @Checkmate published calculations for implementing his metrics in dcrdata https://github.com/checkmatey/checkonchain/tree/master/research_articles/dcr_charts_gitissues {correct? keep?}
+- @Checkmate published [calculations](https://github.com/checkmatey/checkonchain/tree/master/research_articles/dcr_charts_gitissues) for implementing his metrics in dcrdata { correct? keep? }
+- GitHub has made all core features [free for everyone](https://help.github.com/en/github/getting-started-with-github/faq-about-changes-to-githubs-plans), which includes private repos for unlimited users
 
 Dev activity stats for April: 313 active PRs, 247 master commits, 39K added and 23K deleted lines spread across 16 repositories. Contributions came from 2-7 developers per repository.
 
