--- a/journal/202004.md
+++ b/journal/202004.md
@@ -120,11 +120,11 @@ Dev activity stats for April: 313 active PRs, 247 master commits, 39K added and 
 
 ## People
 
-Welcome to new first time contributors with code merged to master: {list people who made meaningful commits merged in master branches, ordered by repo importance, format as: @jdambron ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=jdambron)), @matthawkins90 ([dcrd](https://github.com/decred/dcrd/commits?author=matthawkins90)), @leRequinNoir ([dcrdata](https://github.com/decred/dcrdata/commits?author=leRequinNoir)), @kevinstl ([dcrdex](https://github.com/decred/dcrdex/commits?author=kevinstl)) and @zubairzia0 ([dcrdocs](https://github.com/decred/dcrdocs/commits?author=zubairzia0))
+Welcome to new first time contributors with code merged to master: @jdambron ([dcrandroid](https://github.com/decred/dcrandroid/commits?author=jdambron)), @matthawkins90 ([dcrd](https://github.com/decred/dcrd/commits?author=matthawkins90)), @leRequinNoir ([dcrdata](https://github.com/decred/dcrdata/commits?author=leRequinNoir)), @kevinstl ([dcrdex](https://github.com/decred/dcrdex/commits?author=kevinstl)) and @chillviben ([dcrios](https://github.com/raedahgroup/dcrios/issues?q=is%3Aissue+author%3Achillviben)).
 
 Congratulations to the new [contributor](https://decred.org/contributors/) listed on decred.org:
 
-- Fernando Guisso (fguisso, development)
+- Fernando Guisso (@fguisso, development)
 
 Community stats:
 
